GNOME Bugzilla – Bug 777760
vulkan: Usage of wrong enum in gst_vulkan_format_from_video_format()
Last modified: 2017-01-26 09:03:09 UTC
> vkimagememory.c:64:14: warning: implicit conversion from enumeration type 'GstVideoGLTextureType' to different enumeration type 'VkFormat' (aka 'enum VkFormat') [-Wenum-conversion] > return GST_VIDEO_GL_TEXTURE_TYPE_RGB16; > ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ This looks wrong and should be one of the VkFormat enums I guess. But which? VK_FORMAT_R5G6B5_UNORM_PACK16 and VK_FORMAT_B5G6R5_UNORM_PACK16 depending on order? But then, why is the order ignored for the other ones although there is VK_FORMAT_B8G8R8_UNORM and VK_FORMAT_R8G8B8_UNORM
It follows the GL code which uploads as-is into images. The reordering happens later in glcolorconvert and a future vulkancolorconvert.
commit f6b81a612579641d5289e5947b76f0c822547a53 Author: Matthew Waters <matthew@centricular.com> Date: Thu Jan 26 19:52:07 2017 +1100 vkimagememory: use the correct enum for RGB16/BGR16 formats vkimagememory.c:64:14: warning: implicit conversion from enumeration type 'GstVideoGLTextureType' to different enumeration type 'VkFormat' (aka 'enum VkFormat') [-Wenum-conversion] return GST_VIDEO_GL_TEXTURE_TYPE_RGB16; https://bugzilla.gnome.org/show_bug.cgi?id=777760